[package]
name = "deam"
version = "0.0.0"
edition = "2021"
repository = "http://github.com/nebulaa44/5deam"
license = "MIT"
description = "Reserved for future use."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
reqwest = "0.11.18"
tokio = { version = "1.28.2", features = ["rt", "macros"] }
